force-app/main/default/objects/ServiceResourceCapacity/fields/FSL__HoursInUse__c.field-meta.xml
<CustomField>
    <fullName>FSL__HoursInUse__c</fullName>
    <formula>FSL__MinutesUsed__c / 60</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Hours In Use</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>