force-app/main/default/objects/ServiceResourceCapacity/fields/FSL__MinutesUsed__c.field-meta.xml
<CustomField>
    <fullName>FSL__MinutesUsed__c</fullName>
    <label>Minutes Used</label>
    <precision>14</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>