force-app/main/default/objects/ServiceResourceCapacity/fields/FSL__Work_Items_Allocated__c.field-meta.xml
<CustomField>
    <fullName>FSL__Work_Items_Allocated__c</fullName>
    <label>Work Items Allocated</label>
    <precision>8</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>